<resources>
    <string name="app_name">Spotify Wrapped</string>
    <string name="cur_rewrap">ReWrap Information</string>
    <string name="past_rewrap">Past ReWrap</string>
    <string name="recommendation">Song Recommendation</string>
    <string name="change_username">Change Username</string>
    <string name="change_username_hint">New Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_hint">New Password</string>
    <string name="link_spotify_account">Link Spotify Account</string>
    <string name="linked_spotify_account">Linked Spotify Account</string>
    <string name="sample_username">Sample Username</string>
    <string name="remove_account">Remove Account</string>
    <string name="log_out_firebase">Log Out</string>
    <string name="log_out_spotify">Log Out of Spotify</string>
    <string name="log_in_spotify">Log Into Spotify</string>
    <string name="spotify_account_image_description">Spotify Account Image</string>
    <string name="number">#1</string>
    <string name="top_song">Top Song</string>
    <string name="song_name">Song Name</string>
    <string name="artist">Artist Name</string>
    <string name="album">Album Name</string>
    <string name="description">Description</string>
    <color name="button_color_start">#69db21</color>
    <color name="button_color_end">#8da139</color>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="moveSignUp">Don\'t have an account? Sign Up Here</string>
    <string name="moveLogin">Already have an account? Login Here</string>
    <string name="email">Email</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="artist_name">Artist Name</string>
    <string name="genre">Genre</string>
    <string name="stream_number">69420 Followers</string>
    <string name="top_artists">Top 10 Artists</string>
    <string name="top_songs">Top 10 Songs</string>
    <string name="username_display">USERNAME</string>
    <string name="past_year">Past Year Re-Wrap</string>
    <string name="connect">Connect</string>
    <string name="connect_to_spotify">Connect to Spotify</string>
    <string name="rewrap_name">Rewrap Name</string>
    <string name="play_button">Play_Button</string>
    <string name="volume">Volume</string>
    <string name="forget_password">Forget Password?</string>
    <string name="copyright">© 2024 Spotify ReWrapped</string>
    <string name="save">Save</string>

</resources>