<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:layout_marginTop="240dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/moveSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:clickable="true"
        android:text="@string/moveSignUp"
        android:textColor="#990099"/>

    <TextView
        android:id="@+id/forgotPassword_firebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:text="@string/forget_password"
        android:textColor="@color/purple" />

</LinearLayout>