<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backSettings"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/setting"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />


    <Button
        android:id="@+id/top_artist"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="372dp"
        android:layout_height="261dp"
        android:background="@drawable/gradient_button_3"
        android:gravity="start|bottom"
        android:text="@string/top_artists"
        android:textSize="30dp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/top_song"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="372dp"
        android:layout_height="261dp"
        android:background="@drawable/gradient_button_1"
        android:gravity="start|bottom"
        android:text="@string/top_songs"
        android:textSize="30dp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <ImageView
        android:id="@+id/save_button"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_save_24" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/rewrap_name"
        android:layout_width="372dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:hint="@string/rewrap_name"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>