<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="117dp">

        <ImageView
            android:id="@+id/artistImageView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/description"
            android:src="@drawable/user_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/artist_name"
            android:padding="5dp"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toEndOf="@+id/artistImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/genre"
            android:padding="5dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.336"
            app:layout_constraintStart_toEndOf="@+id/artistImageView"
            app:layout_constraintTop_toBottomOf="@+id/artistNameTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>