<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/user_placeholder"
        app:civ_border_color="#000000"
        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/username_display"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/notification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/round_notifications_active_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/rewrapinfo"
        android:layout_width="369dp"
        android:layout_height="200dp"
        android:background="@drawable/gradient_button_2"
        android:gravity="start|bottom"
        android:text="@string/cur_rewrap"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/past_rewrap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/past_rewrap"
        android:layout_width="369dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/gradient_button_1"
        android:gravity="start|bottom"
        android:text="@string/past_rewrap"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/recommendation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rewrapinfo" />

    <Button
        android:id="@+id/recommendation"
        android:layout_width="369dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/gradient_button_3"
        android:gravity="start|bottom"
        android:text="@string/recommendation"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/past_rewrap"
        app:layout_constraintVertical_bias="0.971" />

</androidx.constraintlayout.widget.ConstraintLayout>